<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".StarDataActivity" >

    <TableLayout
        android:id="@+id/TableLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp" >

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/star_name_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/star_name_tag"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/main_menu_text_color" />

            <TextView
                android:id="@+id/name_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_value"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/main_menu_text_color" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/constellation_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/constellation_tag"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/main_menu_text_color" />

            <TextView
                android:id="@+id/constellation_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/constellation_value"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/main_menu_text_color" />

        </TableRow>
        
       <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/catId_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/catId_tag"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/main_menu_text_color" />

            <TextView
                android:id="@+id/catId_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/catId_value"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/main_menu_text_color" />

        </TableRow>
        
        
        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/ra_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/right_ascension_tag"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/main_menu_text_color" />

            <TextView
                android:id="@+id/ra_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ra_value"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/main_menu_text_color" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/de_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/declination_tag"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/main_menu_text_color" />

            <TextView
                android:id="@+id/de_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/de_value"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/main_menu_text_color" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/mag_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/magnitude_tag"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/main_menu_text_color" />

            <TextView
                android:id="@+id/mag_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mag_value"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/main_menu_text_color" />

        </TableRow>
        
 

    </TableLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/segin_star" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:text="@string/back_to_star_map"
        android:textColor="@color/main_menu_text_color"
        android:onClick="openStarMap" />

</RelativeLayout>